# bozupy

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg
.github/: CODEOWNERS  actionlint.yaml
.github/actions/get-version/: action.yaml
.github/actions/setup/: action.yaml
.github/workflows/: release.yaml  test.yaml
bozupy/: setting.py  util.py
bozupy/cybozu/: util.py
bozupy/garoon/schedule/: __init__.py  client.py  dto.py  dxo.py
bozupy/kintone/: util.py
bozupy/kintone/app/: client.py
bozupy/kintone/comment/: client.py
bozupy/kintone/record/: __init__.py  client.py  dto.py
bozupy/kintone/space/: client.py
tests/: test_util.py
tests/cybozu/: test_url.py  test_util.py
tests/garoon/notification/: test_client.py  test_dxo.py
tests/garoon/schedule/: test_client.py  test_dxo.py
tests/garoon/url/: test_logic.py
tests/garoon/user/: test_client.py
tests/kintone/: test_util.py
tests/kintone/app/: test_client.py  test_dxo.py
tests/kintone/app/graph/: test_logic.py
tests/kintone/comment/: test_client.py  test_dxo.py
tests/kintone/record/: test_client.py  test_dto.py  test_dxo.py
tests/kintone/record/query/: test_logic.py
tests/kintone/space/: test_client.py  test_dxo.py
tests/kintone/url/: test_logic.py
tests/resources/garoon/notification/dxo/: notification.json
tests/resources/garoon/schedule/dxo/: event-repeating.json  event.json  event_no_watchers.json
tests/resources/kintone/app/dxo/: app.json  fields.json  setting.json
tests/slash/: test_client.py  test_dxo.py
(+16 files in other folders)
