[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bozupy"
version = "0.4.0"
authors = [
    {name="SirTeaBear", email="sirteabear@gmail.com"}
]
description = "**Unofficial**: cybozu.com(kintone,Garoon,common) Python SDK"
requires-python = ">=3.14.0"
dependencies = [
    "boto3>=1.43.6",
    "lxml>=6.1.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[dependency-groups]
test = [
    "flake8>=7.3.0",
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
    "responses>=0.26.0",
    "types-pyyaml>=6.0.12.20260508",
    "types-requests>=2.33.0.20260508",
]
